@@ -4,11 +4,16 @@
 
   08 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
+  Add description to the oids array for LUN stats and adding stub functions
+  for CIFS/FCP/HTTP/iSCSI/NFS operations stats.
+
+  08 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/scripts/ss_netapp.php:
   Fixing spacing.
 
   31 Aug 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   scripts/ss_netapp.php:
-  Finish up the ss_netapp_lincenses function and do some minor edits.
+  Finish up the ss_netapp_licenses function and do some minor edits.
 
   29 Aug 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   scripts/ss_netapp.php:
